# rpicam-apps_

apps/CT_Folder/rpicam_jpeg/: Makefile  rpicam_jpeg
apps/CT_Folder/rpicam_still/: Makefile  rpicam_still  rpicam_still.cpp
testingFolder/libcameraOpenCV/: CMakeLists.txt  main.cpp
